objects/SFDC_520_Quote__c.object
<CustomObject>
    <fields>
        <fullName>DMS_Data_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+55, DATEVALUE(CreatedDate)+55)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 55 days.</inlineHelpText>
        <label>DMS Data Verification Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Data_Status__c</fullName>
        <formula>IF((TEXT(DMS_Data_Verification_Complete__c)= NULL) &amp;&amp; (DMS_Data_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(DMS_Data_Verification_Complete__c) = NULL) &amp;&amp; (DMS_Data_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(DMS_Data_Verification_Complete__c) = NULL) &amp;&amp; (DMS_Data_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(DMS_Data_Verification_Complete__c &lt;= DMS_Data_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(DMS_Data_Verification_Complete__c&gt; DMS_Data_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Data Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Data_Verification_Complete__c</fullName>
        <label>DMS Data Verification Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Status__c</fullName>
        <formula>IF((TEXT(DMS_Accessed__c)= NULL) &amp;&amp; (Phase_2_Goal_Date__c &lt; today()), &quot;DMS Access Overdue&quot;,
IF((TEXT(DMS_Accessed__c) = NULL) &amp;&amp; (Phase_2_Goal_Date__c &lt;= (today()+3)), &quot;Nearing Goal Date&quot;,
IF((TEXT(DMS_Accessed__c) = NULL) &amp;&amp; (Phase_2_Goal_Date__c &gt; today()), &quot;Pending DMS Access&quot;, 
IF(DMS_Accessed__c &lt;= Phase_2_Goal_Date__c, &quot;Goal Completed&quot;,
IF(DMS_Accessed__c &gt; Phase_2_Goal_Date__c, &quot;Goal Missed&quot;,NULL
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_System__c</fullName>
        <formula>TEXT(Account__r.DMS_System__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Goal__c</fullName>
        <formula>Phase_4_Goal_Date__c - Prospect_Data_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Graphics_Obtained__c</fullName>
        <label>Date Graphics Obtained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Integration_Complete__c</fullName>
        <inlineHelpText>updated by workflow when the stage is moved from Integration to Integration Complete</inlineHelpText>
        <label>Date Integration Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Intro_Call_Complete__c</fullName>
        <label>Date Intro Call Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Intro_Email_Sent__c</fullName>
        <label>Date Intro Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Packet_Ret_d__c</fullName>
        <inlineHelpText>the date the packet was returned by the Dealer - updates the stage from Introduction to Implementation</inlineHelpText>
        <label>Date Packet Ret&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Packet_Sent__c</fullName>
        <label>Date Packet Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Packet_Verified__c</fullName>
        <label>Date Packet Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Onsite_Visit__c</fullName>
        <label>Date/Time Onsite Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Training_1_Completed__c</fullName>
        <inlineHelpText>updated by workflow when the stage is moved from Training 1 to Traininig 2</inlineHelpText>
        <label>Date Training 1 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Training_2_Completed__c</fullName>
        <inlineHelpText>to be updated by Training when Training 2 Completed</inlineHelpText>
        <label>Date Training 2 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Between_Packet_Sent_Ret_d__c</fullName>
        <formula>Date_Packet_Ret_d__c - Date_Packet_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between Packet Sent/Ret&apos;d</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Create_to_Complete__c</fullName>
        <formula>IF(
   ISBLANK(End_Date__c),
   IF(
      ISBLANK(Alternate_Start_Date__c),
      TODAY() - DATEVALUE(CreatedDate),
      TODAY() - Alternate_Start_Date__c
   ),
   IF(
      ISBLANK(Alternate_Start_Date__c),
      End_Date__c - DATEVALUE(CreatedDate),
      End_Date__c - Alternate_Start_Date__c 
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that uses the Go Live Date and the Project Created Date. Uses the Alternate Start Date if filled in. If Go Live Date is not filled in, shows the project&apos;s age so far.</inlineHelpText>
        <label>Days Elapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Trainer_Onsite__c</fullName>
        <formula>(Confirmed_Training_End__c - Confirmed_Training_Start__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Trainer Onsite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_First_Contact__c</fullName>
        <formula>Attempted_Contact_Date__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to First Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_GO_LIVE_IMG__c</fullName>
        <description>12/16/09 changed GO LIVE to GOAL per Jim</description>
        <formula>if(Days_to_GO_LIVE__c &lt; 6&amp;&amp; text(Approval_Stage__c) !=&quot;GO LIVE&quot;&amp;&amp; RecordTypeId !=&quot;012700000005ett&quot;, TEXT( Days_to_GO_LIVE__c)&amp;&quot;     &quot;&amp;IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000016lbr&amp;oid=00DQ0000000AO6y&amp;lastMod=1250691475000&quot;, &quot;5 Days or less&quot; ,18,18) , text( Days_to_GO_LIVE__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that display an image</inlineHelpText>
        <label>Days to GOAL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_GO_LIVE__c</fullName>
        <description>12/16/2009 - per JIm change to Days to Goal</description>
        <formula>IF(   ISBLANK(Project_Complete_Date__c), Go_Live_Date__c  - Today(),
NULL)</formula>
        <inlineHelpText>formula field  - if the project complete date is emply take the goal Date less Today and calculate the # of days to goal</inlineHelpText>
        <label>Days to GOAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Approval_Received_Website__c</fullName>
        <description>Used by the Kore360 Websites staged page layout.</description>
        <label>Dealer Approval Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_In_Store_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer In Store Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <description>Used for reporting.</description>
        <formula>TEXT(Account__r.Dealer_Type__c)</formula>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Web_Address__c</fullName>
        <formula>Account__r.Website</formula>
        <inlineHelpText>Formula pulling from the Website field on the Account</inlineHelpText>
        <label>Dealer&apos;s Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_IP_Address__c</fullName>
        <description>Haystak</description>
        <label>Dealership IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <inlineHelpText>Date Sales Requested Delivery of Product(s)</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Configuration_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+35, DATEVALUE(CreatedDate)+35)</formula>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 35 days.</inlineHelpText>
        <label>Desking Configuration Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Configuration_Status__c</fullName>
        <formula>IF( 
   !ISPICKVAL(Desking_on_this_Project__c, &quot;No&quot;),
IF((TEXT(Desking_Configured__c) = NULL) &amp;&amp; (Desking_Configuration_Goal_Date__c &lt; today()), 
&quot;Overdue&quot;, 

IF((TEXT(Desking_Configured__c) = NULL) &amp;&amp; (Desking_Configuration_Goal_Date__c &lt;= (today()+3)), 
&quot;Nearing Goal Date&quot;, 

IF((TEXT(Desking_Configured__c) = NULL) &amp;&amp; (Desking_Configuration_Goal_Date__c &gt; today()), 
&quot;Pending&quot;, 

IF(Desking_Configured__c &lt;= Desking_Configuration_Goal_Date__c, 
&quot;Goal Completed&quot;, 

IF(Desking_Configured__c &gt; Desking_Configuration_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL 
))))),
   &quot;N/A&quot;
)</formula>
        <label>Desking Configuration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desking_Configured__c</fullName>
        <label>Desking Configured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Settings_Call_Completed__c</fullName>
        <label>Desking Settings Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Settings_Call_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+40, DATEVALUE(CreatedDate)+40)</formula>
        <inlineHelpText>auto-calculated by the system by taking the Project Created Date + 40 days</inlineHelpText>
        <label>Desking Settings Call Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Settings_Call_Status__c</fullName>
        <formula>IF( 
   !ISPICKVAL(Desking_on_this_Project__c, &quot;No&quot;),
IF((TEXT(Desking_Settings_Call_Completed__c) = NULL) &amp;&amp; (Desking_Settings_Call_Goal_Date__c &lt; today()), 
&quot;Overdue&quot;, 

IF((TEXT(Desking_Settings_Call_Completed__c) = NULL) &amp;&amp; (Desking_Settings_Call_Goal_Date__c &lt;= (today()+3)), 
&quot;Nearing Goal Date&quot;, 

IF((TEXT(Desking_Settings_Call_Completed__c) = NULL) &amp;&amp; (Desking_Settings_Call_Goal_Date__c &gt; today()), 
&quot;Pending&quot;, 

IF(Desking_Settings_Call_Completed__c &lt;= Desking_Settings_Call_Goal_Date__c, 
&quot;Goal Completed&quot;, 

IF(Desking_Settings_Call_Completed__c &gt; Desking_Settings_Call_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL 
))))),
   &quot;N/A&quot;
)</formula>
        <label>Desking Settings Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desking_Verification_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+45, DATEVALUE(CreatedDate)+45)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 45 days.</inlineHelpText>
        <label>Desking Verification Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Verification_Status__c</fullName>
        <formula>IF( 
   !ISPICKVAL(Desking_on_this_Project__c, &quot;No&quot;),
IF((TEXT(Desking_Configured__c)= NULL) &amp;&amp; (Desking_Verification_Goal_Date__c &lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(Desking_Configured__c) = NULL) &amp;&amp; (Desking_Verification_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Desking_Configured__c) = NULL) &amp;&amp; (Desking_Verification_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Desking_Configured__c&lt;= Desking_Verification_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Desking_Configured__c&gt; Desking_Verification_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
))))),
   &quot;N/A&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desking Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desking_Verified__c</fullName>
        <label>Desking Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_on_this_Project__c</fullName>
        <label>Desking on this Project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Banners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Banners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Who_Sent_Last_Dealer_Approval__c</fullName>
        <label>Email - Who Sent Last Dealer Approval</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>This date is updated when the project is approved and the Stage is also updated to GO LIVE</inlineHelpText>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exports_Enabled__c</fullName>
        <label>Exports Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exports_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+30, DATEVALUE(CreatedDate)+30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 30 days.</inlineHelpText>
        <label>Exports Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exports_Status__c</fullName>
        <formula>IF( 
   !ISPICKVAL(Exports_on_this_Project__c, &quot;No&quot;),
IF((TEXT(Exports_Enabled__c)= NULL) &amp;&amp; (Exports_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(Exports_Enabled__c) = NULL) &amp;&amp; (Exports_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Exports_Enabled__c) = NULL) &amp;&amp; (Exports_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Exports_Enabled__c&lt;= Exports_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Exports_Enabled__c&gt; Exports_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
))))),
   &quot;N/A&quot;
)</formula>
        <label>Exports Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exports__c</fullName>
        <label>Exports</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exports_on_this_Project__c</fullName>
        <label>Exports on this Project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Review_Call_Completed__c</fullName>
        <label>Final Review Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Review_Call_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+55, DATEVALUE(CreatedDate)+55)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 55 days.</inlineHelpText>
        <label>Final Review Call Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Review_Call_Status__c</fullName>
        <formula>IF((TEXT(Final_Review_Call_Completed__c)= NULL) &amp;&amp; (Final_Review_Call_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(Final_Review_Call_Completed__c) = NULL) &amp;&amp; (Final_Review_Call_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Final_Review_Call_Completed__c) = NULL) &amp;&amp; (Final_Review_Call_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Final_Review_Call_Completed__c&lt;= Final_Review_Call_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Final_Review_Call_Completed__c&gt; Final_Review_Call_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Review Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Budget__c</fullName>
        <formula>Opportunity__r.Monthly_Advertising_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the monthly advertising budget from the related opportunity</inlineHelpText>
        <label>First Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Call_Due_Date__c</fullName>
        <formula>End_Date__c + 14</formula>
        <label>Follow Up Call Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_30_day_checkpoint__c</fullName>
        <label>Forms (30 day checkpoint)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Forms_Received_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+30, DATEVALUE(CreatedDate)+30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 30 days.</inlineHelpText>
        <label>Forms Received Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Received_Status__c</fullName>
        <formula>IF( 
   !ISPICKVAL(Forms_on_this_Project__c, &quot;No&quot;),
IF((TEXT(Forms_Received__c)= NULL) &amp;&amp; (Forms_Received_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(Forms_Received__c) = NULL) &amp;&amp; (Forms_Received_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Forms_Received__c) = NULL) &amp;&amp; (Forms_Received_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Forms_Received__c&lt;= Forms_Received_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Forms_Received__c&gt; Forms_Received_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
))))),
   &quot;N/A&quot;
)</formula>
        <label>Forms Received Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Received__c</fullName>
        <label>Forms Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Request_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+15, DATEVALUE(CreatedDate)+15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 15 days.</inlineHelpText>
        <label>Intro to Forms Call Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Request_Status__c</fullName>
        <formula>IF( 
   !ISPICKVAL(Forms_on_this_Project__c, &quot;No&quot;),
IF((TEXT(Introduction_to_Forms_Call__c)= NULL) &amp;&amp; (Forms_Request_Goal_Date__c &lt; today()),
 &quot;Overdue&quot;,

IF((TEXT(Introduction_to_Forms_Call__c) = NULL) &amp;&amp; (Forms_Request_Goal_Date__c &lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Introduction_to_Forms_Call__c) = NULL) &amp;&amp; (Forms_Request_Goal_Date__c &gt; today()), 
&quot;Pending&quot;,  

IF(Introduction_to_Forms_Call__c &lt;= Forms_Request_Goal_Date__c,
&quot;Goal Completed&quot;,

IF(Introduction_to_Forms_Call__c &gt; Forms_Request_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
))))),
   &quot;N/A&quot;
)</formula>
        <label>Intro to Forms Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Verified_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+45, DATEVALUE(CreatedDate)+45)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 45 days.</inlineHelpText>
        <label>Forms Verified Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_Verified_Status__c</fullName>
        <formula>IF( 
   !ISPICKVAL(Forms_on_this_Project__c, &quot;No&quot;),
IF((TEXT(Forms_Verified__c)= NULL) &amp;&amp; (Forms_Verified_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(Forms_Verified__c) = NULL) &amp;&amp; (Forms_Verified_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Forms_Verified__c) = NULL) &amp;&amp; (Forms_Verified_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Forms_Verified__c&lt;= Forms_Verified_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Forms_Verified__c&gt; Forms_Verified_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
))))),
   &quot;N/A&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forms Verified Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Verified__c</fullName>
        <label>Forms Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_desking_forms__c</fullName>
        <label>Forms</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Forms_on_this_Project__c</fullName>
        <label>Forms on this Project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frozen_Date__c</fullName>
        <inlineHelpText>The date this project was Frozen (vin) or put On Hold by Haystak. Automatically updated by Workflow (Vin Only)</inlineHelpText>
        <label>Frozen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillmen_Days_to_Process__c</fullName>
        <formula>IF(!ISBLANK(Campaign_Start_Date__c) ,  Campaign_Start_Date__c -  DATEVALUE(CreatedDate)  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillmen Days to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gathering_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+11, DATEVALUE(CreatedDate)+11)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 11 days.</inlineHelpText>
        <label>Requirement Gathering Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <description>12/16/09 Jim requested Go LIve Date be changed to Goal Date</description>
        <inlineHelpText>Goal Date is auto updated by system and is the same as the Confirmed Training Start Date</inlineHelpText>
        <label>Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Day__c</fullName>
        <formula>DAY( End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>day of the month project went live - used to calculate revenue generated by day</inlineHelpText>
        <label>Go Live Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_My_Business_Login__c</fullName>
        <description>Haystak field requested</description>
        <label>Google My Business Login</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Google_My_Business_Password__c</fullName>
        <description>Haystak Field Request</description>
        <label>Google My Business Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAY_SA_Flair__c</fullName>
        <formula>IF( ISPICKVAL(Account__r.Haystak_Strategic_Account__c,&quot;Yes&quot;),IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021ew4&amp;oid=00D700000008zHZ&amp;lastMod=1430246035000&quot;,&quot;Strategic&quot;) , NULL)</formula>
        <inlineHelpText>formula field that displays an image if the account field &quot;Haystak Strategic Account&quot; = Yes</inlineHelpText>
        <label>HAY SA Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Recurring_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valid from 1/10/13.</description>
        <inlineHelpText>Valid from 1/10/13.</inlineHelpText>
        <label>Has Recurring Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haystak_Contract_Status__c</fullName>
        <inlineHelpText>onboarding data has been moved from the sugar contract object to the Vin project object- placeholder for status until project qa&apos;d</inlineHelpText>
        <label>Haystak Contract Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Follow_Up_Date__c</fullName>
        <inlineHelpText>Due 2 weeks after onboarding, the rep will do a follow up call to dealer</inlineHelpText>
        <label>Haystak Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Haystak_UA_Code__c</fullName>
        <description>Haystak</description>
        <label>Haystak UA Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <formula>CASE(
TEXT(Project_Health__c),
&quot;Red&quot;,    IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;),
&quot;Yellow&quot;, IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;),
&quot;Green&quot;,  IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Distance__c</fullName>
        <label>Hotel Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <inlineHelpText>Proposed Hotel</inlineHelpText>
        <label>Hotel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ILM_Completed__c</fullName>
        <label>ILM Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILM_Data_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+40, DATEVALUE(CreatedDate)+40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 40 days.</inlineHelpText>
        <label>Prior CRM/ILM Data Verification GoalDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILM_Data_Status__c</fullName>
        <formula>IF((TEXT(Prior_CRM_ILM_Data_Verified__c)= NULL) &amp;&amp; (ILM_Data_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(Prior_CRM_ILM_Data_Verified__c) = NULL) &amp;&amp; (ILM_Data_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(Prior_CRM_ILM_Data_Verified__c) = NULL) &amp;&amp; (ILM_Data_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(Prior_CRM_ILM_Data_Verified__c&lt;= ILM_Data_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(Prior_CRM_ILM_Data_Verified__c&gt; ILM_Data_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior CRM/ILM Data Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILM_Due_By_PPMS__c</fullName>
        <formula>TEXT(MONTH(Phase_4_Goal_Date__c)) &amp; &quot;/&quot; &amp; 
TEXT(DAY(Phase_4_Goal_Date__c)) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(Phase_4_Goal_Date__c))</formula>
        <label>ILM Due By PPMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILM_Status__c</fullName>
        <formula>IF( Project_Type__c ==&apos;CRM&apos; || Project_Type__c==&apos;ILM&apos;, 
IF((TEXT(  ILM_Completed__c  )= NULL) &amp;&amp; (Phase_4_Goal_Date__c &lt; today()), &quot;ILM Overdue&quot;, 
IF((TEXT( ILM_Completed__c ) = NULL) &amp;&amp; (Phase_4_Goal_Date__c &lt;= (today()+3)), &quot;Nearing ILM Goal Date&quot;, 
IF((TEXT(ILM_Completed__c) = NULL) &amp;&amp; (Phase_4_Goal_Date__c &gt; today()), &quot;Pending ILM&quot;, 
IF(ILM_Completed__c &lt;= Phase_4_Goal_Date__c, &quot;Goal Completed&quot;, 
IF(ILM_Completed__c &gt; Phase_4_Goal_Date__c, &quot;Goal Missed&quot;,NULL 
))))), &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILM Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILM_System__c</fullName>
        <formula>TEXT( Account__r.ILM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILM System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILM_Target_Date__c</fullName>
        <formula>Phase_4_Goal_Date__c -10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILM Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ILM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM_Goal_1__c</fullName>
        <formula>IF((Date_Intro_Call_Complete__c - DATEVALUE(CreatedDate)) &lt;3, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IM Goal 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imp_MRR_Rollup__c</fullName>
        <description>Background field for formula. Not intended for page layout</description>
        <label>Imp MRR Rollup</label>
        <summarizedField>SFDC_520_QuoteLine__c.Unit_Net_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_520_QuoteLine__c.Project_Separation__c</field>
            <operation>equals</operation>
            <value>Implementation</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_520_QuoteLine__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Implementation_Consultant__c</fullName>
        <formula>Related_Implementation_Project__r.Owner:User.User_Full_Name__c</formula>
        <label>Implementation Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact_First_Name__c</fullName>
        <formula>Opportunity__r.Implementation_Contact__r.FirstName</formula>
        <inlineHelpText>formula field that reads the first name of the implementation contact for email templates</inlineHelpText>
        <label>Implementation Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact_ID__c</fullName>
        <description>Used by Training Object flows.</description>
        <formula>Opportunity__r.Implementation_Contact_ID__c</formula>
        <label>Implementation Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked on a website project, a sister IMP project was generated.</inlineHelpText>
        <label>Imp Project Generated</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>